syntax = "proto3";

package juno.user;

import "identifiers.proto";

import "common.proto";

service UserService {
  rpc getUser(identifiers.UserIdentifier) returns (common.User);
  rpc getAllUsers(GetAllUsersRequest) returns (common.Users);
  rpc createUser(CreateUserRequest) returns (common.User);
  rpc updateUser(UpdateUserRequest) returns (common.User);
  rpc deleteUser(identifiers.UserIdentifier) returns (common.User);
  rpc linkProject(LinkProjectToUserRequest) returns (common.User);
  rpc unlinkProject(UnlinkProjectFromUserRequest) returns (common.User);
  rpc getUserPasswordHash(identifiers.UserIdentifier)
      returns (UserPasswordHash);
}

service UserAuthService {
  rpc authenticate(AuthenticateUserRequest) returns (common.User);
}

message UserPasswordHash { string hash = 1; }

message UserPassword { string password = 1; }


message GetAllUsersRequest {}


message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  common.UserType type = 4;
}

message UserUpdateParams {
  optional string email = 1;
  optional string name = 2;
  optional string password = 3;
  optional common.UserType type = 4;
}

message UpdateUserRequest {
  identifiers.UserIdentifier userIdentifier = 1;
  UserUpdateParams updateParams = 2;
}

message LinkProjectToUserRequest {
  identifiers.ProjectIdentifier project = 1;
  identifiers.UserIdentifier user = 2;
}

message UnlinkProjectFromUserRequest {
  identifiers.ProjectIdentifier project = 1;
  identifiers.UserIdentifier user = 2;
}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}
